tests/baselines/reference/implementGenericWithMismatchedTypes.errors.txt
tests/cases/compiler/implementGenericWithMismatchedTypes.ts(8,5): error TS2421: Class member of type '(x: string) => number' is not assignable to implementing interface member of type '(x: T) => T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'T' is not assignable to type 'string'.
tests/cases/compiler/implementGenericWithMismatchedTypes.ts(17,5): error TS2421: Class member of type '<Tstring>(x: Tstring) => number' is not assignable to implementing interface member of type '(x: T) => T'.
  Type 'number' is not assignable to type 'T'.


==== tests/cases/compiler/implementGenericWithMismatchedTypes.ts (2 errors) ====
    // no errors because in the derived types the best common type for T's value is Object
    // and that matches the original signature for assignability since we treat its T's as Object
    
    interface IFoo<T> {
        foo(x: T): T;
    }
    class C<T> implements IFoo<T> { // error
        foo(x: string): number {
        ~~~
!!! error TS2421: Class member of type '(x: string) => number' is not assignable to implementing interface member of type '(x: T) => T'.
!!! error TS2421:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2421:     Type 'T' is not assignable to type 'string'.
            return null;
        }
    }
    
    interface IFoo2<T> {
        foo(x: T): T;
    }
    class C2<T> implements IFoo2<T> { // error
        foo<Tstring>(x: Tstring): number {
        ~~~
!!! error TS2421: Class member of type '<Tstring>(x: Tstring) => number' is not assignable to implementing interface member of type '(x: T) => T'.
!!! error TS2421:   Type 'number' is not assignable to type 'T'.
            return null;
        }
    }